{
  "version": 4,
  "terraform_version": "0.13.1",
  "serial": 9,
  "lineage": "3a9cc381-9842-5898-0451-c79b24cd802e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip-rearc-quest-terraform-env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0d47872e4803cf691",
            "domain": "vpc",
            "id": "eipalloc-0b33a9e90890edbbc",
            "instance": "i-0d96cc8b58a4450cd",
            "network_interface": "eni-0e4d92f31c0a1b726",
            "private_dns": "ip-10-0-32-18.ec2.internal",
            "private_ip": "10.0.32.18",
            "public_dns": "ec2-54-159-90-153.compute-1.amazonaws.com",
            "public_ip": "54.159.90.153",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.rearc-quest-terraform",
            "aws_security_group.rearc-quest-terraform-sg",
            "aws_subnet.subnet-uno",
            "aws_vpc.rearc-quest-terraform-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rearc-quest-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff8a91507f77f867",
            "arn": "arn:aws:ec2:us-east-1:921968541628:instance/i-0d96cc8b58a4450cd",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d96cc8b58a4450cd",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "myKeyPair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e4d92f31c0a1b726",
            "private_dns": "ip-10-0-32-18.ec2.internal",
            "private_ip": "10.0.32.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02714d23b9d2cca2e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0744ae053868a838a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0775fd9588c525bef",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0744ae053868a838a"
            ]
          },
          "dependencies": [
            "aws_security_group.rearc-quest-terraform-sg",
            "aws_subnet.subnet-uno",
            "aws_vpc.rearc-quest-terraform-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "rearc-quest-terraform-env-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:921968541628:internet-gateway/igw-0cab4908845e5ea81",
            "id": "igw-0cab4908845e5ea81",
            "owner_id": "921968541628",
            "vpc_id": "vpc-0c5c4e041c3be9517"
          },
          "dependencies": [
            "aws_vpc.rearc-quest-terraform-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-rearc-quest-terraform-env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-076bb99af0fa64dc9",
            "owner_id": "921968541628",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cab4908845e5ea81",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0c5c4e041c3be9517"
          },
          "dependencies": [
            "aws_internet_gateway.rearc-quest-terraform-env-gw",
            "aws_vpc.rearc-quest-terraform-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2186c468c317527",
            "route_table_id": "rtb-076bb99af0fa64dc9",
            "subnet_id": "subnet-0775fd9588c525bef"
          },
          "dependencies": [
            "aws_internet_gateway.rearc-quest-terraform-env-gw",
            "aws_route_table.route-table-rearc-quest-terraform-env",
            "aws_subnet.subnet-uno",
            "aws_vpc.rearc-quest-terraform-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rearc-quest-terraform-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:921968541628:security-group/sg-0744ae053868a838a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0744ae053868a838a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "rearc-quest-terraform-sg",
            "name_prefix": "",
            "owner_id": "921968541628",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0c5c4e041c3be9517"
          },
          "dependencies": [
            "aws_vpc.rearc-quest-terraform-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-uno",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:921968541628:subnet/subnet-0775fd9588c525bef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.32.0/19",
            "id": "subnet-0775fd9588c525bef",
            "map_public_ip_on_launch": false,
            "owner_id": "921968541628",
            "vpc_id": "vpc-0c5c4e041c3be9517"
          },
          "dependencies": [
            "aws_vpc.rearc-quest-terraform-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "rearc-quest-terraform-env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:921968541628:vpc/vpc-0c5c4e041c3be9517",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-063327398d33b7fbe",
            "default_route_table_id": "rtb-0a3814d21c53a7298",
            "default_security_group_id": "sg-03f9549b7321aae14",
            "dhcp_options_id": "dopt-538d6429",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c5c4e041c3be9517",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a3814d21c53a7298",
            "owner_id": "921968541628"
          }
        }
      ]
    }
  ]
}